Tue Feb 23 00:31:53 1999  George Lebl  <jirka@5z.com>

	* gnome-pixmap.c: fix for the new requisition stuff so that
	  set_usize works properly, use gdk_imlib_move_{image,mask} instead
	  of the copy variety to save some time, and add some documentation
	  to the functions that were missing it.

	* gnome-pixmap-entry.[ch]: actually guarantee that disk isn't touched
	  more then once a second when typing, fix a memory leak and cache
	  the last image that was previewed, so that we don't load the same
	  image over and over

Sun Feb 21 19:06:51 1999  Maciej Stachowiak  <mstachow@alum.mit.edu>

	* gnome-winhints.c (gnome_win_hints_get_workspace): This code was
 	on crack, it was getting the _WIN_HINTS property instead of
 	_WIN_WORKSPACE.

1999-02-21  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* Makefile.am (gnome_segv_LDADD): Use libgnomeui.la without the
	path from the topdir so that AM_MAKEFLAGS=-j4 works. 
	(ted_demo_LDADD, stock_demo_LDADD, winhints_demo_LDADD,
	animator_demo_LDADD, dock_demo_LDADD): Likewise.
	
Sun Feb 21 04:36:54 1999  George Lebl  <jirka@5z.com>

	* gnome-winhints.c: don't use CARD32's for format 32 hints, Xlib sends
	  them as longs and those can be 64bit on alpha

1999-02-20  Stuart Parmenter <pavlov@pavlov.net>

	* gnome-calculator.c: Accept keypad input.

1999-02-18  Sergey Panov <sipan@mit.edu>

        * Makefile.am: Makefile will now be installing gtkrc.ru

1999-02-17  Jonathan Blandford  <jrb@redhat.com>

	* gnome-color-picker.c (gnome_color_picker_init): Changed the shadow.
	(render): now draws a stipple when insensitive
	(render): let's remove the commment... S-:
	(render): use the right visual

1999-02-17  Sergey Panov  <sipan@mit.edu>

        * gnome-canvas-text.c (gnome_canvas_text_set_arg): fontset
        can be used now to configure font of the canvas text.
        * gnome-canvas-text.h: Updated list of object arguments

1999-02-16  Ulrich Drepper  <drepper@cygnus.com>
